option java_package = "skadistats.clarity.wire.csgo.s1.proto";
option java_outer_classname = "CSGOS1MessageId";

enum NET_Messages {
  net_NOP = 0;
  net_Disconnect = 1;
  net_File = 2;
  net_SplitScreenUser = 3;
  net_Tick = 4;
  net_StringCmd = 5;
  net_SetConVar = 6;
  net_SignonState = 7;
  net_PlayerAvatarData = 100;
}

enum CLC_Messages {
  clc_ClientInfo = 8;
  clc_Move = 9;
  clc_VoiceData = 10;
  clc_BaselineAck = 11;
  clc_ListenEvents = 12;
  clc_RespondCvarValue = 13;
  clc_FileCRCCheck = 14;
  clc_LoadingProgress = 15;
  clc_SplitPlayerConnect = 16;
  clc_ClientMessage = 17;
  clc_CmdKeyValues = 18;
  clc_HltvReplay = 20;
}

enum SVC_Messages {
  svc_ServerInfo = 8;
  svc_SendTable = 9;
  svc_ClassInfo = 10;
  svc_SetPause = 11;
  svc_CreateStringTable = 12;
  svc_UpdateStringTable = 13;
  svc_VoiceInit = 14;
  svc_VoiceData = 15;
  svc_Print = 16;
  svc_Sounds = 17;
  svc_SetView = 18;
  svc_FixAngle = 19;
  svc_CrosshairAngle = 20;
  svc_BSPDecal = 21;
  svc_SplitScreen = 22;
  svc_UserMessage = 23;
  svc_EntityMessage = 24;
  svc_GameEvent = 25;
  svc_PacketEntities = 26;
  svc_TempEntities = 27;
  svc_Prefetch = 28;
  svc_Menu = 29;
  svc_GameEventList = 30;
  svc_GetCvarValue = 31;
  svc_PaintmapData = 33;
  svc_CmdKeyValues = 34;
  svc_EncryptedData = 35;
  svc_HltvReplay = 36;
  svc_Broadcast_Command = 38;
}

enum ECstrike15UserMessages {
  CS_UM_VGUIMenu = 1;
  CS_UM_Geiger = 2;
  CS_UM_Train = 3;
  CS_UM_HudText = 4;
  CS_UM_SayText = 5;
  CS_UM_SayText2 = 6;
  CS_UM_TextMsg = 7;
  CS_UM_HudMsg = 8;
  CS_UM_ResetHud = 9;
  CS_UM_GameTitle = 10;
  CS_UM_Shake = 12;
  CS_UM_Fade = 13;
  CS_UM_Rumble = 14;
  CS_UM_CloseCaption = 15;
  CS_UM_CloseCaptionDirect = 16;
  CS_UM_SendAudio = 17;
  CS_UM_RawAudio = 18;
  CS_UM_VoiceMask = 19;
  CS_UM_RequestState = 20;
  CS_UM_Damage = 21;
  CS_UM_RadioText = 22;
  CS_UM_HintText = 23;
  CS_UM_KeyHintText = 24;
  CS_UM_ProcessSpottedEntityUpdate = 25;
  CS_UM_ReloadEffect = 26;
  CS_UM_AdjustMoney = 27;
  CS_UM_UpdateTeamMoney = 28;
  CS_UM_StopSpectatorMode = 29;
  CS_UM_KillCam = 30;
  CS_UM_DesiredTimescale = 31;
  CS_UM_CurrentTimescale = 32;
  CS_UM_AchievementEvent = 33;
  CS_UM_MatchEndConditions = 34;
  CS_UM_DisconnectToLobby = 35;
  CS_UM_PlayerStatsUpdate = 36;
  CS_UM_DisplayInventory = 37;
  CS_UM_WarmupHasEnded = 38;
  CS_UM_ClientInfo = 39;
  CS_UM_XRankGet = 40;
  CS_UM_XRankUpd = 41;
  CS_UM_CallVoteFailed = 45;
  CS_UM_VoteStart = 46;
  CS_UM_VotePass = 47;
  CS_UM_VoteFailed = 48;
  CS_UM_VoteSetup = 49;
  CS_UM_ServerRankRevealAll = 50;
  CS_UM_SendLastKillerDamageToClient = 51;
  CS_UM_ServerRankUpdate = 52;
  CS_UM_ItemPickup = 53;
  CS_UM_ShowMenu = 54;
  CS_UM_BarTime = 55;
  CS_UM_AmmoDenied = 56;
  CS_UM_MarkAchievement = 57;
  CS_UM_MatchStatsUpdate = 58;
  CS_UM_ItemDrop = 59;
  CS_UM_GlowPropTurnOff = 60;
  CS_UM_SendPlayerItemDrops = 61;
  CS_UM_RoundBackupFilenames = 62;
  CS_UM_SendPlayerItemFound = 63;
  CS_UM_ReportHit = 64;
  CS_UM_XpUpdate = 65;
  CS_UM_QuestProgress = 66;
  CS_UM_ScoreLeaderboardData = 67;
  CS_UM_PlayerDecalDigitalSignature = 68;
  CS_UM_WeaponSound = 69;
  CS_UM_UpdateScreenHealthBar = 70;
  CS_UM_EntityOutlineHighlight = 71;
  CS_UM_SSUI = 72;
  CS_UM_SurvivalStats = 73;
  CS_UM_DisconnectToLobby2 = 74;
  CS_UM_EndOfMatchAllPlayersData = 75;
  CS_UM_RoundImpactScoreData = 79;
  CS_UM_CurrentRoundOdds = 80;
  CS_UM_DeepStats = 81;
  CS_UM_UtilMsg = 82;
  CS_UM_UtilMsg_Response = 83;
}
