option java_package = "skadistats.clarity.wire.csgo.s1.proto";
option java_outer_classname = "CSGOS1NetMessages";

import "networkbasetypes-common.proto";
import "netmessages-common.proto";

enum ESplitScreenMessageType {
  option allow_alias = true;
  MSG_SPLITSCREEN_ADDUSER = 0;
  MSG_SPLITSCREEN_REMOVEUSER = 1;
  MSG_SPLITSCREEN_TYPE_BITS = 1;
}

enum ReplayEventType_t {
  REPLAY_EVENT_CANCEL = 0;
  REPLAY_EVENT_DEATH = 1;
  REPLAY_EVENT_GENERIC = 2;
  REPLAY_EVENT_STUCK_NEED_FULL_UPDATE = 3;
}

message CNETMsg_PlayerAvatarData {
  optional uint32 accountid = 1;
  optional bytes rgb = 2;
}

message CCLCMsg_VoiceData {
  optional bytes data = 1;
  optional fixed64 xuid = 2;
  optional .VoiceDataFormat_t format = 3 [default = VOICEDATA_FORMAT_ENGINE];
  optional int32 sequence_bytes = 4;
  optional uint32 section_number = 5;
  optional uint32 uncompressed_sample_offset = 6;
}

message CCLCMsg_FileCRCCheck {
  optional int32 code_path = 1;
  optional string path = 2;
  optional int32 code_filename = 3;
  optional string filename = 4;
  optional int32 file_fraction = 5;
  optional bytes md5 = 6;
  optional uint32 crc = 7;
  optional int32 file_hash_type = 8;
  optional int32 file_len = 9;
  optional int32 pack_file_id = 10;
  optional int32 pack_file_number = 11;
}

message CCLCMsg_SplitPlayerConnect {
  optional .CMsg_CVars convars = 1;
}

message CSVCMsg_ServerInfo {
  optional int32 protocol = 1;
  optional int32 server_count = 2;
  optional bool is_dedicated = 3;
  optional bool is_official_valve_server = 4;
  optional bool is_hltv = 5;
  optional bool is_replay = 6;
  optional bool is_redirecting_to_proxy_relay = 21;
  optional int32 c_os = 7;
  optional fixed32 map_crc = 8;
  optional fixed32 client_crc = 9;
  optional fixed32 string_table_crc = 10;
  optional int32 max_clients = 11;
  optional int32 max_classes = 12;
  optional int32 player_slot = 13;
  optional float tick_interval = 14;
  optional string game_dir = 15;
  optional string map_name = 16;
  optional string map_group_name = 17;
  optional string sky_name = 18;
  optional string host_name = 19;
  optional uint32 public_ip = 20;
  optional uint64 ugc_map_id = 22;
}

message CSVCMsg_SetPause {
  optional bool paused = 1;
}

message CSVCMsg_VoiceData {
  optional int32 client = 1;
  optional bool proximity = 2;
  optional fixed64 xuid = 3;
  optional int32 audible_mask = 4;
  optional bytes voice_data = 5;
  optional bool caster = 6;
  optional .VoiceDataFormat_t format = 7 [default = VOICEDATA_FORMAT_ENGINE];
  optional int32 sequence_bytes = 8;
  optional uint32 section_number = 9;
  optional uint32 uncompressed_sample_offset = 10;
}

message CSVCMsg_FixAngle {
  optional bool relative = 1;
  optional .CMsgQAngle angle = 2;
}

message CSVCMsg_CrosshairAngle {
  optional .CMsgQAngle angle = 1;
}

message CSVCMsg_SplitScreen {
  optional .ESplitScreenMessageType type = 1 [default = MSG_SPLITSCREEN_ADDUSER];
  optional int32 slot = 2;
  optional int32 player_index = 3;
}

message CSVCMsg_GetCvarValue {
  optional int32 cookie = 1;
  optional string cvar_name = 2;
}

message CSVCMsg_Menu {
  optional int32 dialog_type = 1;
  optional bytes menu_key_values = 2;
}

message CSVCMsg_PaintmapData {
  optional bytes paintmap = 1;
}

message CSVCMsg_EntityMsg {
  optional int32 ent_index = 1;
  optional int32 class_id = 2;
  optional bytes ent_data = 3;
}

message CSVCMsg_CmdKeyValues {
  optional bytes keyvalues = 1;
}

message CSVCMsg_EncryptedData {
  optional bytes encrypted = 1;
  optional int32 key_type = 2;
}

message CSVCMsg_HltvReplay {
  optional int32 delay = 1;
  optional int32 primary_target = 2;
  optional int32 replay_stop_at = 3;
  optional int32 replay_start_at = 4;
  optional int32 replay_slowdown_begin = 5;
  optional int32 replay_slowdown_end = 6;
  optional float replay_slowdown_rate = 7;
}

message CCLCMsg_HltvReplay {
  optional int32 request = 1;
  optional float slowdown_length = 2;
  optional float slowdown_rate = 3;
  optional int32 primary_target_ent_index = 4;
  optional float event_time = 5;
}

message CSVCMsg_Broadcast_Command {
  optional string cmd = 1;
}
